# gpu-spacecharge

./: CMakeLists.txt
inc/: DifferentialGPU.h  IntegrateEzGPU.h  PoissonSolver3DGPU.h
inc/kernels/: DifferentialGPU.cu  IntegrateEzGPU.cu  PoissonSolver3DGPU.cu
src/: AliCudaLinkDef.h  AliTPCPoissonSolverCuda.cxx  AliTPCPoissonSolverCuda.h  AliTPCSpaceCharge3DDriftLine.cxx  AliTPCSpaceCharge3DDriftLineCuda.cxx  AliTPCSpaceCharge3DDriftLineCuda.h  AliTPCSpaceCharge3DDriftLineGPULinkDef.h  CMakeLists.txt
